<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName">Gestor Titulos Propios ULPGC</string>
    <string name="accessMessageManager">Acceder como Gestor</string>
    <string name="accessMessageTeacher">Acceder como Docente</string>
    <string name="rememberMe_message">Recordar usuario</string>
    <string name="button_login">Acceder</string>
    <string name="login_string">Nombre de usuario</string>
    <string name="pass_string">Contraseña</string>
    <string name="loggingIn">Accediendo&#8230;</string>
    <string name="errorLogin">Nombre de usuario/Contraseña incorrecto</string>
    <string name="message_back_start">Volver a la pantalla de inicio</string>
    <string name="retry">Reintentar</string>
    <string name="cancel">Cancelar</string>
    <string name="searching">Buscando&#8230;</string>
    <string name="searchMessage_before">Por el momento, se han encontrado </string>
    <string name="searchMessage_after"> propuestas que cumplen los criterios de búsqueda</string>
    <string name="searchResults_before">Resultados de la búsqueda:\nSe han encontrado </string>
    <string name="searchResults_after">títulos que coinciden con los \nparámetros de búsqueda introducidos</string>
    <string name="finishSearch">¿Concluir búsqueda?</string>
    <string name="showResults">Mostrar resultados</string>
    <string name="repeatSearch">Repetir búsqueda</string>
    <string name="logoutMessageTitle">Salir</string>
    <string name="logoutMessage">¿Está seguro de querer salir de la sesión iniciada?</string>
    <string name="edicion">Edición</string>
    <string name="tipo">Tipo</string>
    <string name="estado">Estado</string>
    <string name="buscar">Buscar</string>
    <string name="directorValidated">DNI de Director académico validado</string>
    <string name="busqueda_nombre">Búsqueda por denominación</string>
    <string name="busqueda_codigo">Búsqueda por código de título</string>
    <string name="search_hint">Ayuda: Puede usar cualquier número de condiciones para la búsqueda. Si no elige ninguna, se mostrarán todos los títulos propuestos.</string>
    <string name="ownDegreeBasic">&lt;b&gt;Enseñanza Propia Básica&lt;/b&gt;</string>
    <string name="ownDegreeHigher">&lt;b&gt;Enseñanza Propia Superior&lt;/b&gt;</string>
    <string name="expert">&lt;b&gt;Experto Universitario&lt;/b&gt;</string>
    <string name="mastery">&lt;b&gt;Maestría Universitaria&lt;/b&gt;</string>
    <string name="professionalDiploma">&lt;b&gt;Diploma Profesional&lt;/b&gt;</string>
    <string name="state">&lt;b&gt;Estado: &lt;/b&gt; </string>
    <string name="starts">&lt;b&gt;Inicio: &lt;/b&gt;</string>
    <string name="code">&lt;b&gt;Código: &lt;/b&gt;</string>
    <string name="loadingMessage">Cargando&#8230;</string>
    <string name="errorReport">Informe de errores</string>
    <string name="emptyFields">No se ha podido remitir la propuesta. Existen campos sin rellenar</string>
    <string name="msgNoValidationErrors">Esta propuesta se encuentra en estado enviado. No se han producido errores de verificación</string>
    <string name="general_info">Información general de la propuesta</string>
    <string name="academic_info">Información académica</string>
    <string name="subjects">Asignaturas</string>
    <string name="economic_info">Memoria económica</string>
    <string name="teachers">Profesorado</string>
    <string name="send_to_evaluate">Enviar propuesta para evaluación</string>
    <string name="download_degree">Descarga de la memoria en PDF</string>
    <string name="report">Informe de errores</string>
    <string name="unspecified">Sin especificar</string>
    <string name="hours">horas</string>
    <string name="loadMoreTeachers_first">Cargar más docentes&lt;br&gt;4/</string>
    <string name="loadedTeachers"> profesores cargados</string>
    <string name="loadMoreTeachers">Cargar más docentes&lt;br&gt;</string>
    <string name="notify">&lt;b&gt;Notificar&lt;/b&gt;</string>
    <string name="yes">Sí</string>
    <string name="notPresent">No introducido</string>
    <string name="notUlpgcTeacher">No es docente en la ULPGC</string>
    <string name="checkingMessage">Comprobando&#8230;</string>
    <string name="teacherNotPresent">El DNI introducido no pertenece a ningún profesor de la ULPGC propuesto en la plataforma</string>
    <string name="notifying">Remitiendo notificación&#8230;</string>
    <string name="final_budget">Resumen Ingresos/Gastos</string>
    <string name="title_activity_degree_economic_info">Memoria Económica</string>
    <string name="overviewTab">Resumen</string>
    <string name="incomeTab">Ingresos</string>
    <string name="expensesTab">Gastos</string>
    <string name="student_sum">Ingresos por matrículas</string>
    <string name="income">Ingresos</string>
    <string name="balance">Balance</string>
    <string name="external_incomes">Total</string>
    <string name="app_name">Gestor TTPP</string>
    <string name="empty">Seleccione un apartado en el menú de la izquierda</string>
    <string name="admin_support">Apoyo administrativo</string>
    <string name="travel_accomodation">Estancia y alojamiento</string>
    <string name="fungible">Material fungible</string>
    <string name="bibliography">Bibliografía y material inventariable</string>
    <string name="ads">Publicidad</string>
    <string name="other_expenditures">Otros</string>
    <string name="error_period">Error. Fuera de plazo</string>
    <string name="error_io">Error de red</string>
    <string name="error_io_message">Por favor, compruebe su conexión a internet</string>
    <string name="total_expenses">Total de gastos</string>
    <string name="errors_activity">Errores en la propuesta</string>
    <string name="message_no_errors">La propuesta no ha generado ningún error</string>
    <string name="noStorageAvailable">La tarjeta SD no se encuentra presente</string>
    <string name="noAppAvailable">No existe aplicación para la visualización del fichero PDF</string>
    <string name="loadedSubjects">asignaturas cargadas</string>
    <string name="year">Curso académico</string>
    <string name="application_dates">Presentación de propuestas</string>
    <string name="first_rectification">Primer periodo de subsanación</string>
    <string name="second_rectification">Segundo periodo de subsanación</string>
    <string name="send">Enviar</string>
    <string name="period_start">Inicio:</string>
    <string name="period_end">Fin:</string>
    <string name="outOfTime">La propuesta se encuentra fuera de plazo</string>
    <string name="incorrectState">No se puede enviar a evaluar una propuesta en estado rechazado/enviado/cancelado</string>
    <string name="sendingDegree">Enviando&#8230;</string>
    <string name="sent">Propuesta enviada</string>
    <string name="outOfPeriod">La propuesta que se intenta evaluar pertenece a un periodo diferente al curso académico actual</string>
    <string name="outOfPeriodForProposal">Actualmente, el plazo de solicitud de nuevas propuestas se encuentra cerrado</string>
    <string name="progressDownload">Progreso de la descarga</string>
    <string name="downloading">Descargando&#8230;</string>
    <string name="noNumberFields">El dato introducido no es un número</string>
    <string name="downloaded">Bytes descargados</string>
    <string name="degree_denomination">Denominación</string>
    <string name="degree_competences">Competencias</string>
    <string name="degree_proposed_by">Proponente</string>
    <string name="degree_academic_director">DNI de Director Académico</string>
    <string name="check_academic_director">Comprobar DNI</string>
    <string name="degree_units">Unidades participantes</string>
    <string name="degree_min_alumns">Plazas mínimas</string>
    <string name="degree_max_alumns">Plazas máximas</string>
    <string name="degree_economic_manager">Gestor económico</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="new_proposal">Crear nueva propuesta</string>
    <string name="explore_proposals">Explorar propuestas existentes</string>
    <string name="institutions">Centro adscrito</string>
    <string name="teaching_address">Sede de la organización</string>
    <string name="teaching_outside">Título impartido fuera de las Islas Canarias</string>
    <string name="proposalSent">La propuesta ha sido remitida. Recuerde que se trata de un borrador que ha de ser completado a través de la aplicación web</string>
    <string name="unidentifiedError">La propuesta no se ha podido verificar. Por favor, inténtelo de nuevo desde la aplicación web</string>
    <string name="title_activity_login_user">Autentificación</string>
    <string name="title_activity_search_degrees">Búsqueda de propuestas</string>
    <string name="title_activity_search_results">Resultado de la búsqueda</string>
    <string name="title_generalInfo">Información general</string>
    <string name="title_hourDistribution">Reparto de horas</string>
    <string name="title_expenditures">Gastos</string>
    <string name="title_ULPGCteacherExpenditures">Profesorado ULPGC</string>
    <string name="title_ExternalteacherExpenditures">Profesorado Externo</string>
    <string name="title_incomeRegistration">Derivados de las matrículas</string>
    <string name="title_directIncome">Directos y subvenciones</string>
    <string name="title_activity_degree_main_menu">Menú principal</string>
    <string name="title_activity_academic_info">Información General</string>
    <string name="title_activity_subjects_info">Asignaturas</string>
    <string name="title_activity_teachers_info">Profesorado</string>
    <string name="title_activity_economic_info">Memoria Académica</string>
    <string name="title_activity_reports_info">Informe de errores</string>
    <string name="title_activity_single_subject">SingleSubject</string>
    <string name="title_activity_single_teacher">SingleTeacher</string>
    <string name="title_activity_periods">Plazos</string>
    <string name="title_activity_select_task">Seleccionar tarea</string>
    <string name="title_activity_create_degree">Crear nueva propuesta</string>
    <string name="mode">Modalidad</string>
    <string name="oriented">Orientado a</string>
    <string name="degree_min_credits">Mínimo de créditos anuales</string>
    <string name="knowledge_branch">Rama de conocimiento</string>

</resources>