<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_linear_search"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/edicion_spinner"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="10"
        android:background="@drawable/grey_buttons"
        android:prompt="@string/tipo" />

    <Spinner
        android:id="@+id/tipo_spinner"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@drawable/grey_buttons"
        android:prompt="@string/edicion" />

    <Spinner
        android:id="@+id/estado_spinner"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@drawable/grey_buttons"
        android:prompt="@string/estado" />

    <EditText
        android:id="@+id/busqueda_codigo"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:hint="@string/busqueda_codigo" />

    <EditText
        android:id="@+id/busqueda_nombre"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:hint="@string/busqueda_nombre" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="right"
        android:layout_weight="10"
        android:background="@drawable/grey_buttons"
        android:text="@string/buscar"
        android:textSize="24sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:gravity="center"
        android:text="@string/search_hint"
        android:textStyle="bold" />

</LinearLayout>