<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/lightblue_border"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:weightSum="2" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/year"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <include
                android:id="@+id/first_row"
                android:layout_width="wrap_content"
                layout="@layout/single_row"
                android:gravity="center" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/application_dates"
            android:textStyle="bold" />

        <include
            android:id="@+id/second_row"
            layout="@layout/two_items_row" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/first_rectification"
            android:textStyle="bold" />

        <include
            android:id="@+id/third_row"
            layout="@layout/two_items_row" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/second_rectification"
            android:textStyle="bold" />

        <include
            android:id="@+id/fourth_row"
            layout="@layout/two_items_row" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/send_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/mybutton_layout"
            android:text="@string/send"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>