<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="3" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/desc"
            android:src="@drawable/logo_vtd_rgb" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/invert_gradient_background_noborder"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/login_manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/login_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_string" />

        <EditText
            android:id="@+id/pass_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass_string"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/rememberButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rememberMe_message" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent" >

            <Button
                android:id="@+id/loginButton"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/mybutton_layout"
                android:text="@string/button_login" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>